# everybody_codes_2025

./: .ghci  .gitattributes  .gitignore  LICENSE.md  README.md  ec2025.cabal  everybody-codes.cabal  hie.yaml
app/: Main.hs  Story1.hs  Story2.hs  Story3.hs  Y2024.hs  Y2025.hs
inputs/actual/1/01/: 1.txt  2.txt  3.txt
inputs/actual/1/02/: 1.txt  2.txt  3.txt
inputs/actual/1/03/: 1.txt  2.txt  3.txt
inputs/actual/2/01/: 1.txt  2.txt  3.txt
inputs/actual/2/02/: 1.txt  2.txt  3.txt
inputs/actual/2/03/: 1.txt  2.txt  3.txt
inputs/actual/2024/01/: 1.txt  2.txt  3.txt
inputs/actual/2024/02/: 1.txt  2.txt  3.txt
inputs/actual/2024/03/: 1.txt  2.txt  3.txt
inputs/actual/2024/04/: 1.txt  2.txt  3.txt
inputs/actual/2024/05/: 1.txt  2.txt  3.txt
inputs/actual/2024/06/: 1.txt  2.txt  3.txt
inputs/actual/2024/07/: 1.txt  2.txt  3.txt
inputs/actual/2024/08/: 1.txt  2.txt  3.txt
inputs/actual/2024/09/: 1.txt  2.txt  3.txt
inputs/actual/2024/10/: 1.txt  2.txt  3.txt
inputs/actual/2024/11/: 1.txt  2.txt  3.txt
inputs/actual/2024/12/: 1.txt  2.txt  3.txt
inputs/actual/2024/13/: 1.txt  2.txt  3.txt
inputs/actual/2024/14/: 1.txt  2.txt  3.txt
inputs/actual/2024/15/: 1.txt  2.txt  3.txt
inputs/actual/2024/16/: 1.txt  2.txt  3.txt
inputs/actual/2024/17/: 1.txt  2.txt  3.txt
inputs/actual/2024/18/: 1.txt  2.txt  3.txt
inputs/actual/2024/19/: 1.txt  2.txt  3.txt
inputs/actual/2024/20/: 1.txt  2.txt  3.txt
inputs/actual/2025/01/: 1.txt  2.txt  3.txt
inputs/actual/2025/02/: 1.txt  2.txt  3.txt
inputs/actual/2025/03/: 1.txt  2.txt  3.txt
inputs/actual/2025/04/: 1.txt  2.txt  3.txt
inputs/actual/2025/05/: 1.txt  2.txt  3.txt
inputs/actual/2025/06/: 1.txt  2.txt  3.txt
inputs/actual/2025/07/: 1.txt  2.txt  3.txt
inputs/actual/2025/08/: 1.txt  2.txt  3.txt
inputs/actual/2025/09/: 1.txt  2.txt  3.txt
inputs/actual/2025/10/: 1.txt  2.txt  3.txt
inputs/actual/2025/11/: 1.txt  2.txt  3.txt
inputs/actual/2025/12/: 1.txt  2.txt  3.txt
inputs/actual/2025/13/: 1.txt  2.txt  3.txt
inputs/actual/2025/14/: 1.txt  2.txt  3.txt
inputs/actual/2025/15/: 1.txt  2.txt  3.txt
inputs/actual/2025/16/: 1.txt  2.txt  3.txt
inputs/actual/2025/17/: 1.txt  2.txt  3.txt
inputs/actual/2025/18/: 1.txt  2.txt  3.txt
inputs/actual/2025/19/: 1.txt  2.txt  3.txt
inputs/actual/2025/20/: 1.txt  2.txt  3.txt
inputs/actual/3/01/: 1.txt  2.txt  3.txt
inputs/actual/3/02/: 1.txt  2.txt  3.txt
inputs/actual/3/03/: 1.txt  2.txt  3.txt
inputs/sample/1/01/: 1.txt  2.txt  3.txt
inputs/sample/1/02/: 1.txt  2.txt  3.txt
inputs/sample/1/03/: 1.txt  2.txt  3.txt
inputs/sample/2/01/: 1.txt  2.txt  3.txt
inputs/sample/2/02/: 1.txt  2.txt  3.txt
inputs/sample/2/03/: 1.txt  2.txt  3.txt
inputs/sample/2024/01/: 1.txt  2.txt  3.txt
inputs/sample/2024/02/: 1.txt  2.txt  3.txt
inputs/sample/2024/03/: 1.txt  2.txt  3.txt
inputs/sample/2024/04/: 1.txt  2.txt  3.txt
inputs/sample/2024/05/: 1.txt  2.txt  3.txt
inputs/sample/2024/06/: 1.txt  2.txt  3.txt
inputs/sample/2024/07/: 1.txt  2.txt  3.txt
inputs/sample/2024/08/: 1.txt  2.txt  3.txt
inputs/sample/2024/09/: 1.txt  2.txt  3.txt
inputs/sample/2024/10/: 1.txt  2.txt  3.txt
inputs/sample/2024/11/: 1.txt  2.txt  3.txt
inputs/sample/2024/12/: 1.txt  2.txt  3.txt
inputs/sample/2024/13/: 1.txt  2.txt  3.txt
inputs/sample/2024/14/: 1.txt  2.txt  3.txt
inputs/sample/2024/15/: 1.txt  2.txt  3.txt
inputs/sample/2024/16/: 1.txt  2.txt  3.txt
inputs/sample/2024/17/: 1.txt  2.txt  3.txt
inputs/sample/2024/18/: 1.txt  2.txt  3.txt
inputs/sample/2024/19/: 1.txt  2.txt  3.txt
inputs/sample/2024/20/: 1.txt  2.txt  3.txt
inputs/sample/2025/01/: 1.txt  2.txt  3.txt
inputs/sample/2025/02/: 1.txt  2.txt  3.txt
inputs/sample/2025/03/: 1.txt  2.txt  3.txt
inputs/sample/2025/04/: 1.txt  2.txt  3.txt
inputs/sample/2025/05/: 1.txt  2.txt  3.txt
src/: Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Days.hs  ECSolution.hs  GetInputs.hs
src/Events/Y2024/: Quest01.hs  Quest02.hs  Quest03.hs  Quest04.hs  Quest05.hs  Quest06.hs  Quest07.hs  Quest08.hs  Quest09.hs  Quest10.hs  Quest11.hs  Quest12.hs  Quest13.hs  Quest14.hs  Quest15.hs  Quest16.hs  Quest17.hs  Quest18.hs  Quest19.hs  Quest20.hs  Quests.hs
src/Events/Y2025/: Quest01.hs  Quest02.hs  Quest03.hs  Quest04.hs  Quest05.hs  Quest06.hs  Quest07.hs  Quest08.hs  Quest09.hs  Quest10.hs  Quest11.hs  Quest12.hs  Quest13.hs  Quest14.hs  Quest15.hs  Quest16.hs  Quest17.hs  Quest18.hs  Quest19.hs  Quest20.hs  Quests.hs
src/Stories/S1/: Quest01.hs  Quest02.hs  Quest03.hs  Quests.hs
src/Stories/S2/: Quest01.hs  Quest02.hs  Quest03.hs  Quests.hs
src/Stories/S3/: Quest01.hs  Quest02.hs  Quest03.hs  Quests.hs
test/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day07Spec.hs  Day08Spec.hs  Day09Spec.hs  Day10Spec.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs  Day14Spec.hs  Day15Spec.hs  Day16Spec.hs  Day17Spec.hs  Day18Spec.hs  Day19Spec.hs  Day20Spec.hs  SpecHelper.hs
test/Events/Y2024/: Quest01Spec.hs  Quest02Spec.hs  Quest03Spec.hs  Quest04Spec.hs  Quest05Spec.hs  Quest06Spec.hs  Quest07Spec.hs  Quest08Spec.hs  Quest09Spec.hs  Quest10Spec.hs  Quest11Spec.hs  Quest12Spec.hs  Quest13Spec.hs  Quest14Spec.hs  Quest15Spec.hs  Quest16Spec.hs  Quest17Spec.hs  Quest18Spec.hs  Quest19Spec.hs  Quest20Spec.hs
test/Events/Y2025/: Quest01Spec.hs  Quest02Spec.hs  Quest03Spec.hs  Quest04Spec.hs  Quest05Spec.hs  Quest06Spec.hs  Quest07Spec.hs  Quest08Spec.hs  Quest09Spec.hs  Quest10Spec.hs  Quest11Spec.hs  Quest12Spec.hs  Quest13Spec.hs  Quest14Spec.hs  Quest15Spec.hs  Quest16Spec.hs  Quest17Spec.hs  Quest18Spec.hs  Quest19Spec.hs  Quest20Spec.hs
test/Stories/S1/: Quest01Spec.hs  Quest02Spec.hs  Quest03Spec.hs
test/Stories/S2/: Quest01Spec.hs  Quest02Spec.hs  Quest03Spec.hs
test/Stories/S3/: Quest01Spec.hs  Quest02Spec.hs  Quest03Spec.hs
(+54 files in other folders)
